--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,4 @@ pytorch-lightning
 permacache
 stitch-core
 scikit-learn
+s-exp-parser @ git+https://github.com/kavigupta/s-exp-parser@bfb01df5df8f61486cdddeeea45f10d962faa7e2
