--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,4 @@ permacache
 stitch-core
 scikit-learn
 s-exp-parser @ git+https://github.com/kavigupta/s-exp-parser@bfb01df5df8f61486cdddeeea45f10d962faa7e2
+frozendict
