--- a/.pylintrc
+++ b/.pylintrc
@@ -435,7 +435,7 @@ disable=raw-checker-failed,
         use-dict-literal,
         unnecessary-lambda-assignment,
         # deal with this later
-        missing-function-docstring,missing-class-docstring,missing-module-docstring,import-outside-toplevel,too-many-arguments,too-many-locals,too-many-instance-attributes
+        missing-function-docstring,missing-class-docstring,missing-module-docstring,import-outside-toplevel,too-many-arguments,too-many-locals,too-many-instance-attributes,too-many-return-statements
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
