--- a/.pylintrc
+++ b/.pylintrc
@@ -436,6 +436,7 @@ disable=raw-checker-failed,
         unnecessary-lambda-assignment,
         too-few-public-methods,
         unspecified-encoding,
+        invalid-name,
         # deal with this later
         missing-function-docstring,missing-class-docstring,missing-module-docstring,import-outside-toplevel,too-many-arguments,too-many-locals,too-many-instance-attributes,too-many-return-statements
 
