--- a/.pylintrc
+++ b/.pylintrc
@@ -438,7 +438,7 @@ disable=raw-checker-failed,
         unspecified-encoding,
         invalid-name,
         # deal with this later
-        missing-function-docstring,missing-class-docstring,missing-module-docstring,import-outside-toplevel,too-many-arguments,too-many-locals,too-many-instance-attributes,too-many-return-statements
+        missing-function-docstring,missing-class-docstring,missing-module-docstring,import-outside-toplevel,too-many-arguments,too-many-locals,too-many-instance-attributes,too-many-return-statements,too-many-ancestors
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
@@ -566,7 +566,7 @@ contextmanager-decorators=contextlib.contextmanager
 # List of members which are set dynamically and missed by pylint inference
 # system, and so shouldn't trigger E1101 when accessed. Python regular
 # expressions are accepted.
-generated-members=numpy.*, torch.*, numpy.random.*
+generated-members=numpy.*, torch.*, torch.nn.functional.*, numpy.random.*
 
 # Tells whether to warn about missing members when the owner of the attribute
 # is inferred to be None.
