--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,8 +19,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest pylint
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip install pytest pylint parameterized .
       - name: Test with pytest
         run: |
           pytest tests
