--- a/.pylintrc
+++ b/.pylintrc
@@ -438,7 +438,7 @@ disable=raw-checker-failed,
         unspecified-encoding,
         invalid-name,
         # deal with this later
-        missing-function-docstring,missing-class-docstring,missing-module-docstring,import-outside-toplevel,too-many-arguments,too-many-locals,too-many-instance-attributes,too-many-return-statements,too-many-ancestors,too-many-public-methods
+        missing-function-docstring,missing-class-docstring,missing-module-docstring,import-outside-toplevel,too-many-arguments,too-many-locals,too-many-instance-attributes,too-many-return-statements,too-many-ancestors,too-many-public-methods,too-many-lines
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
