--- a/.pylintrc
+++ b/.pylintrc
@@ -437,6 +437,8 @@ disable=raw-checker-failed,
         too-few-public-methods,
         unspecified-encoding,
         invalid-name,
+        not-callable,
+        arguments-differ,
         # deal with this later
         missing-function-docstring,missing-class-docstring,missing-module-docstring,import-outside-toplevel,too-many-arguments,too-many-locals,too-many-instance-attributes,too-many-return-statements,too-many-ancestors,too-many-public-methods,too-many-lines,line-too-long
 
