separate out isort/black into its own check

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -26,4 +26,6 @@ jobs:
       - name: Lint with pylint
         run: |
           pylint neurosym setup.py tests
+      - name: Check for sorted imports and black code style
+        run: |
           isort neurosym tests; black neurosym tests; bash -c '[ $(git status --porcelain --untracked-files=no | wc -c) -eq 0 ]  || (git status; git diff; exit 1)'
