--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,8 +3,40 @@ name: Python package
 on: [push]
 
 jobs:
-  build:
+  list-tests:
+      runs-on: ubuntu-22.04
+      outputs:
+        matrix: ${{ steps.set-matrix.outputs.matrix }}
+      steps:
+        - uses: actions/checkout@v4
+        - id: set-matrix
+          run: echo "matrix=$((find tests -name '*_test.py'; find tests -name 'test_*.py') | jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_OUTPUT
 
+  test:
+
+    runs-on: ubuntu-latest
+    needs: [list-tests]
+    strategy:
+      matrix:
+        python-version: ["3.10", "3.11"]
+        test-file: ${{ fromJson(needs.list-tests.outputs.matrix) }}
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+          cache: 'pip'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: Test with pytest
+        run: |
+          pytest ${{ matrix.test-file }}
+
+  lint:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -18,17 +50,21 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-      - name: Test with pytest
-        run: |
-          pytest tests
+          pip install -r requirements.txt pylint black==24.4.2 isort==5.13.2
       - name: Lint with pylint
         run: |
           pylint neurosym setup.py tests
-      - name: Check for sorted imports and black code style
+          isort neurosym tests
+          black neurosym tests
+          bash -c '[ $(git status --porcelain --untracked-files=no | wc -c) -eq 0 ]  || (git status; git diff; exit 1)'
+ 
+  check-docs:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install dependencies
         run: |
-          isort neurosym tests; black neurosym tests; bash -c '[ $(git status --porcelain --untracked-files=no | wc -c) -eq 0 ]  || (git status; git diff; exit 1)'
+          pip install -r requirements.txt
       - name: Check that the docs build
         run: |
           cd docs && make html
