--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -53,7 +53,7 @@ jobs:
           pip install -r requirements.txt pylint black==24.4.2 isort==5.13.2
       - name: Lint with pylint
         run: |
-          pylint neurosym setup.py tests
+          pylint --rcfile=.pylintrc neurosym setup.py tests
           isort neurosym tests
           black neurosym tests
           bash -c '[ $(git status --porcelain --untracked-files=no | wc -c) -eq 0 ]  || (git status; git diff; exit 1)'
