--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -50,7 +50,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt pylint black==24.4.2 isort==5.13.2
+          pip install -r requirements.txt pylint==3.2.7 black==24.4.2 isort==5.13.2
       - name: Lint with pylint
         run: |
           pylint --rcfile=.pylintrc neurosym setup.py tests
