--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -34,7 +34,7 @@ jobs:
           pip install -r requirements.txt
       - name: Test with pytest
         run: |
-          pytest ${{ matrix.test-file }}
+          pytest ${{ matrix.test-file }} --retries 3
 
   lint:
     runs-on: ubuntu-latest
