--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -34,7 +34,7 @@ jobs:
           pip install -r requirements.txt
       - name: Test with pytest
         run: |
-          pytest ${{ matrix.test-file }} || pytest ${{ matrix.test-file }} --lf
+          pytest -W error::RuntimeWarning ${{ matrix.test-file }} || pytest -W error::RuntimeWarning ${{ matrix.test-file }} --lf
 
   lint:
     runs-on: ubuntu-latest
