--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -36,6 +36,29 @@ jobs:
         run: |
           pytest ${{ matrix.test-file }} || pytest ${{ matrix.test-file }} --lf
 
+  test-multiversion-fast:
+
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
+        test-file: ["tests/python/test_dfa.py"]
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+          cache: 'pip'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: Test with pytest
+        run: |
+          pytest ${{ matrix.test-file }} || pytest ${{ matrix.test-file }} --lf
+
   lint:
     runs-on: ubuntu-latest
     strategy:
