--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -27,14 +27,14 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-          cache: 'pip'
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          uv sync --group test
       - name: Test with pytest
         run: |
-          pytest ${{ matrix.test-file }} || pytest ${{ matrix.test-file }} --lf
+          uv run pytest ${{ matrix.test-file }} || uv run pytest ${{ matrix.test-file }} --lf
 
   test-multiversion-fast:
 
@@ -50,14 +50,14 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-          cache: 'pip'
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          uv sync --group test
       - name: Test with pytest
         run: |
-          pytest ${{ matrix.test-file }} || pytest ${{ matrix.test-file }} --lf
+          uv run pytest ${{ matrix.test-file }} || uv run pytest ${{ matrix.test-file }} --lf
 
   lint:
     runs-on: ubuntu-latest
@@ -71,23 +71,31 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt pylint==3.2.7 black==24.4.2 isort==5.13.2
+          uv sync --group lint
       - name: Lint with pylint
         run: |
-          pylint --rcfile=.pylintrc neurosym setup.py tests
-          isort neurosym tests
-          black neurosym tests
+          uv run pylint --rcfile=.pylintrc neurosym setup.py tests
+          uv run isort neurosym tests
+          uv run black neurosym tests
           bash -c '[ $(git status --porcelain --untracked-files=no | wc -c) -eq 0 ]  || (git status; git diff; exit 1)'
- 
+
   check-docs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt
+          uv sync --group docs
       - name: Check that the docs build
         run: |
-          cd docs && make html
+          cd docs && uv run make html
