--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,7 @@ docs = [
   "sphinx==7.1.2",
   "sphinx-rtd-theme==1.3.0rc1",
   "sphobjinv",
+  "tomli; python_version < '3.11'",
 ]
 dev = [
     "pre-commit>=4.3.0",
