--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,7 +18,7 @@ jobs:
     needs: [list-tests]
     strategy:
       matrix:
-        python-version: ["3.10"]
+        python-version: ["3.10", "3.11", "3.12"]
         test-file: ${{ fromJson(needs.list-tests.outputs.matrix) }}
 
     steps:
