--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ dist
 build
 neurosym-env
 outputs/crim13_results/near_outputs/
+data/**/*.npy
+outputs/mice_results/near_outputs/*/log.txt
+outputs/mice_results/near_outputs/*/program.p
